UI fixes of alignment

--- a/components/common/asset/Asset-table-header/asset-table-header.module.css
+++ b/components/common/asset/Asset-table-header/asset-table-header.module.css
@@ -18,7 +18,7 @@
     display: flex;
     align-items: center;
     display: grid;
-    grid-template-columns:  20% 20% 20% 20% 20% 10%;
+    grid-template-columns:  50% 10% 10% 10% 10% 10%;
   }
   /* .headContent1{
     width: 20%;
