--- a/components/common/asset/asset-thumbail.module.css
+++ b/components/common/asset/asset-thumbail.module.css
@@ -188,7 +188,7 @@
   border:none;
   align-items: center;
   display: grid;
-  grid-template-columns:  20% 20% 20% 20% 20% 20%;
+  grid-template-columns:  50% 10% 10% 10% 10% 10%;
 }
 
 .list-image-wrapper{
