--- a/components/common/asset/detail-side-panel.module.css
+++ b/components/common/asset/detail-side-panel.module.css
@@ -117,7 +117,10 @@
   padding-bottom: 8px;
   /* border-bottom: solid 1px #dddad4; */
 }
-
+.emptyBox{
+  width: 18px;
+  height:18px;
+}
 
 
 @media screen and (max-width: 1200px) {
