--- a/components/common/modals/move-modal.module.css
+++ b/components/common/modals/move-modal.module.css
@@ -10,6 +10,10 @@
   border-bottom: 1px solid var(--color-secondary-border);
   align-items: center;
 }
+.emptyBox{
+  width: 13px;
+  height:13px;
+}
 
 .list li img:nth-child(1) {
   width: 16px;
