--- a/components/main/collection-subcollection-list.module.css
+++ b/components/main/collection-subcollection-list.module.css
@@ -10,6 +10,10 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   
   }
+  .emptyBox{
+    width: 18px;
+    height:18px;
+  }
   .attribute-space{
     margin-left:18px;
   }
