--- a/components/nested-subcollection-sidenav/nested-sidenav-dropdown.module.css
+++ b/components/nested-subcollection-sidenav/nested-sidenav-dropdown.module.css
@@ -235,8 +235,8 @@
   align-items: center;
 }
 .emptyBox{
-  width: 12px;
-  height:12px;
+  width: 24px;
+  height:24px;
 }
 
 
